
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int ZSTD_dictContentType_e ;
typedef int ZSTD_DCtx ;


 size_t ZSTD_DCtx_loadDictionary_advanced (int *,void const*,size_t,int ,int ) ;
 int ZSTD_dlm_byRef ;

size_t ZSTD_DCtx_refPrefix_advanced(ZSTD_DCtx* dctx, const void* prefix, size_t prefixSize, ZSTD_dictContentType_e dictContentType)
{
    return ZSTD_DCtx_loadDictionary_advanced(dctx, prefix, prefixSize, ZSTD_dlm_byRef, dictContentType);
}
